<resources>
    <string name="app_name">HowRU.Life</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_menu">Menu</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="reset">Reset</string>
    <string name="sadface">😞</string>
    <string name="veryHappy">😁</string>
    <string name="meh">😐</string>
    <string name="sad">🙁</string>
    <string name="happy">🙂</string>
    <string name="please_enter_mood">Please enter mood</string>
    <string name="settings">Settings</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_out">Log Out</string>
    <string name="how_ru_life_logo">how ru.life logo</string>
    <string name="sound_button">Sound Button</string>
    <string name="to_help_you_relax">To help you relax.</string>
    <string name="inhale_deeply_through_your_nose_for_4_seconds_n_nhold_your_breath_for_4_seconds_n_nexhale_slowly_and_steadily_through_your_mouth_for_4_seconds_n_nhold_for_4_seconds_before_beginning_the_next_cycle_n_nrepeat_for_as_many_cycles_as_desired">Inhale deeply through your nose for 4 seconds.\n\nHold your breath for 4 seconds.\n\nExhale slowly and steadily through your mouth for 4 seconds.\n\nHold for 4 seconds before beginning the next cycle.\n\nRepeat for as many cycles as desired.</string>
    <string name="_4_4_4_4_day_exercise">4–4–4–4 Day Exercise</string>
    <string name="next">Next</string>
    <string name="_4_7_8_sleep_exercise">4–7–8 Sleep Exercise</string>
    <string name="_4_4_4_focus_exercise" />
    <string name="focus_exercise">4–4–4 Focus Exercise</string>
    <string name="to_help_you_focus">To help you focus</string>
    <string name="close_one_nostril_using_your_fingers_and_inhale_deeply_through_the_other_nostril_counting_to_4_seconds_n_nnow_close_both_nostrils_using_your_fingers_and_hold_your_breath_for_4_seconds_n_nrelease_the_previously_closed_nostril_and_exhale_slowly_and_completely_through_that_nostril_for_4_seconds_n_nrepeat_these_steps_for_as_many_cycles_as_desired">Close one nostril using your fingers and inhale deeply through the other nostril, counting to 4 seconds.\n\nNow, close both nostrils using your fingers and hold your breath for 4 seconds.\n\nRelease the previously closed nostril and exhale slowly and completely through that nostril for 4 seconds.\n\nRepeat these steps for as many cycles as desired.</string>
    <string name="rain">Rain</string>
    <string name="waves">Waves</string>
    <string name="fire">Fire</string>
    <string name="forest">Forest</string>
    <string name="meditation">Meditation</string>
    <string name="birds">Birds</string>
    <string name="sound_choice">Sound Choice</string>
    <string name="number_of_cycles">Number of cycles</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_10">10</string>
    <string name="_5">5</string>
    <string name="back_button" />
    <string name="ease_your_sleep">Ease Your Sleep</string>
    <string name="destress_your_day">Destress Your Day</string>
    <string name="strengthen_your_focus">Strengthen Your Focus</string>
    <string name="rest_your_mind">Rest your Mind</string>
    <string name="exercises">Exercises</string>
    <string name="breath_animation" />
    <string name="small_circle" />
    <string name="hold">HOLD</string>
    <string name="breathe">BREATHE</string>
    <string name="exhale">EXHALE</string>
    <string name="app_logo">App Logo</string>
    <string name="what_activity_did_you_do">What activity did you do?</string>
    <string name="feeling">Feeling</string>
    <string name="what_trigger_did_you_experience">What trigger did you experience?</string>
    <string name="what_sign_did_you_experience">What sign did you experience?</string>
    <string name="what_strategies_can_you_use">What strategies can you use?</string>
    <string name="gifbackground">gifbackground</string>
    <string name="exerciseGif" />
    <string name="psychological_sigh">Psychological Sigh</string>
    <string name="card_details">Card Details</string>
    <string name="card_number">Card Number</string>
    <string name="expiry_date_mm_yy">Expiry Date (MM/YY)</string>
    <string name="cvv">CVV</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="notifications">Notifications</string>
    <string name="faq_and_help">FAQ and Help</string>
    <string name="profile">Profile</string>
    <string name="test_notification">Test Notification</string>
    <string name="save_settings">Save Settings</string>
    <string name="use_24_hour_format">Use 24-Hour Format</string>
    <string name="use_default_time_12_00_pm">Use Default Time (12:00 PM)</string>
    <string name="enable_daily_reminders">Enable Daily Reminders</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="select_a_strategy_and_action">Select a Strategy and Action</string>
    <string name="what_are_the_signs">What are the signs?</string>
    <string name="mood_prompt_today">How are you feeling today?</string>
    <string name="mood_prompt_past">How were you feeling on %s?</string>
    <string name="saving">Saving...</string>
    <string name="mood_saved_success">Mood saved successfully!</string>
    <string name="save_error">Error: %s</string>
    <string name="continue_button">Continue</string>
    <string name="select_mood_error">Please select a mood first</string>
    <string name="user_not_signed_in_error">User not signed in</string>
    <string name="unknown_error">Unknown error</string>

    <string name="calendar_title">Calendar</string>
</resources>