<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey">

   <ImageView
       android:id="@+id/imageView3"
       android:layout_width="155dp"
       android:layout_height="166dp"
       android:layout_marginTop="32dp"
       android:contentDescription="@string/how_ru_life_logo"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:srcCompat="@drawable/logo" />

   <ImageView
       android:id="@+id/soundButton"
       android:layout_width="40dp"
       android:layout_height="40dp"
       android:layout_marginStart="355dp"
       android:layout_marginTop="16dp"
       android:layout_marginEnd="16dp"
       android:contentDescription="@string/sound_button"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:srcCompat="@drawable/sound" />

   <ImageView
       android:id="@+id/backButton"
       android:layout_width="40dp"
       android:layout_height="43dp"
       android:layout_marginStart="19dp"
       android:layout_marginTop="16dp"
       android:layout_marginEnd="352dp"
       android:contentDescription="@string/sound_button"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:srcCompat="@drawable/backbutton" />


   <ToggleButton
       android:id="@+id/toggleRain"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="161dp"
       android:layout_marginTop="341dp"
       android:layout_marginEnd="162dp"
       android:layout_marginBottom="434dp"
       android:background="@drawable/rounded_button_toggle"
       android:checked="false"
       android:textColor="@color/white"
       android:textOff="@string/rain"
       android:textOn="@string/rain"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />

   <ToggleButton
       android:id="@+id/toggleWaves"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="32dp"
       android:layout_marginTop="267dp"
       android:layout_marginEnd="291dp"
       android:layout_marginBottom="508dp"
       android:background="@drawable/rounded_button_toggle"
       android:checked="false"
       android:text="@string/waves"
       android:textColor="@android:color/white"
       android:textOff="@string/waves"
       android:textOn="@string/waves"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />

   <ToggleButton
       android:id="@+id/toggleFire"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="292dp"
       android:layout_marginTop="267dp"
       android:layout_marginEnd="31dp"
       android:layout_marginBottom="508dp"
       android:background="@drawable/rounded_button_toggle"
       android:checked="false"
       android:text="@string/fire"
       android:textColor="@color/white"
       android:textOff="@string/fire"
       android:textOn="@string/fire"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />

   <ToggleButton
       android:id="@+id/toggleForest"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="32dp"
       android:layout_marginTop="341dp"
       android:layout_marginEnd="291dp"
       android:layout_marginBottom="434dp"
       android:background="@drawable/rounded_button_toggle"
       android:checked="false"
       android:text="@string/forest"
       android:textColor="@color/white"
       android:textOff="@string/forest"
       android:textOn="@string/forest"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />

   <ToggleButton
       android:id="@+id/toggleMeditation"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="292dp"
       android:layout_marginTop="341dp"
       android:layout_marginEnd="21dp"
       android:layout_marginBottom="434dp"
       android:background="@drawable/rounded_button_toggle"
       android:checked="false"
       android:text="@string/meditation"
       android:textColor="@color/white"
       android:textOff="@string/meditation"
       android:textOn="@string/meditation"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />

   <ToggleButton
       android:id="@+id/toggleBirds"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="161dp"
       android:layout_marginTop="267dp"
       android:layout_marginEnd="162dp"
       android:layout_marginBottom="508dp"
       android:background="@drawable/rounded_button_toggle"
       android:checked="false"
       android:text="@string/birds"
       android:textColor="@color/white"
       android:textOff="@string/birds"
       android:textOn="@string/birds"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />

   <TextView
       android:id="@+id/textView6"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="121dp"
       android:layout_marginTop="212dp"
       android:layout_marginEnd="121dp"
       android:layout_marginBottom="574dp"
       android:text="@string/sound_choice"
       android:textColor="@color/white"
       android:textSize="28sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />

   <TextView
       android:id="@+id/textView7"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="96dp"
       android:layout_marginTop="484dp"
       android:text="@string/number_of_cycles"
       android:textColor="@color/white"
       android:textSize="28sp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />

   <ToggleButton
       android:id="@+id/cycle1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="56dp"
       android:layout_marginTop="531dp"
       android:layout_marginBottom="244dp"
       android:background="@drawable/rounded_button_toggle"
       android:checked="false"
       android:text="@string/_1"
       android:textColor="@color/white"
       android:textOff="@string/_1"
       android:textOn="@string/_1"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />

   <ToggleButton
       android:id="@+id/cycle2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="161dp"
       android:layout_marginTop="531dp"
       android:layout_marginBottom="244dp"
       android:background="@drawable/rounded_button_toggle"
       android:checked="false"
       android:text="@string/_2"
       android:textColor="@color/white"
       android:textOff="@string/_2"
       android:textOn="@string/_2"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />

   <ToggleButton
       android:id="@+id/cycle3"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="267dp"
       android:layout_marginTop="531dp"
       android:layout_marginBottom="244dp"
       android:background="@drawable/rounded_button_toggle"
       android:checked="false"
       android:text="@string/_3"
       android:textColor="@color/white"
       android:textOff="@string/_3"
       android:textOn="@string/_3"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />

   <ToggleButton
       android:id="@+id/cycle10"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="212dp"
       android:layout_marginTop="597dp"
       android:layout_marginBottom="178dp"
       android:background="@drawable/rounded_button_toggle"
       android:checked="false"
       android:text="@string/_10"
       android:textColor="@color/white"
       android:textOff="@string/_10"
       android:textOn="@string/_10"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />

   <ToggleButton
       android:id="@+id/cycle5"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="108dp"
       android:layout_marginTop="597dp"
       android:layout_marginBottom="178dp"
       android:background="@drawable/rounded_button_toggle"
       android:checked="false"
       android:text="@string/_5"
       android:textColor="@color/white"
       android:textOff="@string/_5"
       android:textOn="@string/_5"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />

   <Button
       android:id="@+id/nextButton"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="161dp"
       android:layout_marginTop="703dp"
       android:layout_marginEnd="162dp"
       android:layout_marginBottom="72dp"
       android:backgroundTint="#566975"
       android:text="@string/next"
       android:textColor="@android:color/white"
       android:textSize="16sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
