<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8E9AAF"
    >

    <!-- Logo -->

    <!-- Back Button -->
    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="40dp"
        android:layout_height="43dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="60dp"
        android:contentDescription="@string/sound_button"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/backbutton"
        app:tint = "#F2E9E4"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/card_details"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <!-- Card Number Field -->
    <EditText
        android:id="@+id/cardNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/card_number"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_marginTop="24dp"
        android:maxLength="19"
        android:paddingEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2" />

    <ImageView
        android:id="@+id/cardTypeLogo"
        android:layout_width="32dp"
        android:layout_height="24dp"
        android:layout_marginEnd="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/cardNumber"
        app:layout_constraintEnd_toEndOf="@id/cardNumber"
        app:layout_constraintTop_toTopOf="@id/cardNumber" />

    <!-- Expiry Date -->
    <EditText
        android:id="@+id/expiryDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/expiry_date_mm_yy"
        android:textColor="@color/white"
        android:inputType="text"
        android:layout_marginTop="12dp"
        android:textColorHint="@color/white"
        android:maxLength="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardNumber" />

    <!-- CVV -->
    <EditText
        android:id="@+id/cvv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/cvv"
        android:textColor="@color/white"
        android:inputType="numberPassword"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColorHint="@color/white"
        android:maxLength="4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/expiryDate" />

    <!-- Confirm Button -->
    <Button
        android:id="@+id/confirmPayment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/confirm_payment"
        android:backgroundTint="#E5989B"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvv" />
</androidx.constraintlayout.widget.ConstraintLayout>