<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundfocus">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="155dp"
        android:layout_height="165dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/how_ru_life_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />


    <ImageView
        android:id="@+id/backButton"
        android:layout_width="40dp"
        android:layout_height="43dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="60dp"
        android:contentDescription="@string/sound_button"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/backbutton" />

    <TextView
        android:id="@+id/exerciseTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="193dp"
        android:layout_marginBottom="506dp"
        android:gravity="center"
        android:text="@string/focus_exercise"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/exerciseSubtitle"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="237dp"
        android:layout_marginBottom="467dp"
        android:gravity="center"
        android:text="@string/to_help_you_focus"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/instructionsText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="277dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="112dp"
        android:gravity="center"
        android:lineSpacingExtra="8dp"
        android:text="@string/close_one_nostril_using_your_fingers_and_inhale_deeply_through_the_other_nostril_counting_to_4_seconds_n_nnow_close_both_nostrils_using_your_fingers_and_hold_your_breath_for_4_seconds_n_nrelease_the_previously_closed_nostril_and_exhale_slowly_and_completely_through_that_nostril_for_4_seconds_n_nrepeat_these_steps_for_as_many_cycles_as_desired"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
