<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sleepbackground">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="155dp"
        android:layout_height="166dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/how_ru_life_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />


    <ImageView
        android:id="@+id/backButton"
        android:layout_width="40dp"
        android:layout_height="43dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="60dp"
        android:contentDescription="@string/sound_button"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/backbutton" />

    <TextView
        android:id="@+id/exerciseSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="127dp"
        android:layout_marginTop="256dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="448dp"
        android:gravity="center"
        android:text="@string/to_help_you_relax"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/exerciseInstructions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="325dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="84dp"
        android:gravity="center"
        android:lineSpacingExtra="6dp"
        android:text="@string/inhale_deeply_through_your_nose_for_4_seconds_n_nhold_your_breath_for_4_seconds_n_nexhale_slowly_and_steadily_through_your_mouth_for_4_seconds_n_nhold_for_4_seconds_before_beginning_the_next_cycle_n_nrepeat_for_as_many_cycles_as_desired"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/exerciseTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="93dp"
        android:layout_marginTop="213dp"
        android:layout_marginEnd="94dp"
        android:layout_marginBottom="486dp"
        android:gravity="center"
        android:text="@string/_4_7_8_sleep_exercise"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>